--- a/src/DemoChatWindow.mxml
+++ b/src/DemoChatWindow.mxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Window
-    xmlns:mx="http://www.adobe.com/2006/mxml"
+<s:Window
+    xmlns:fx="http://ns.adobe.com/mxml/2009"
+    xmlns:mx="library://ns.adobe.com/flex/mx"
+    xmlns:s="library://ns.adobe.com/flex/spark"
     width="400"
     height="400"
     >
-    <mx:Script>
+    <fx:Script>
     <![CDATA[
 
         import org.coderepos.net.xmpp.XMPPMessage;
@@ -22,11 +24,11 @@
         }
 
     ]]>
-    </mx:Script>
-    <mx:HBox width="100%" height="100%">
-        <mx:Panel title="Conversation" width="100%" height="100%">
+    </fx:Script>
+    <s:HGroup width="100%" height="100%">
+        <s:Panel title="Conversation" width="100%" height="100%">
         <mx:TextArea />
-        </mx:Panel>
-    </mx:HBox>
-</mx:Window>
+        </s:Panel>
+    </s:HGroup>
+</s:Window>
 
