--- a/src/DemoSettingWindow.mxml
+++ b/src/DemoSettingWindow.mxml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Window
-    xmlns:mx="http://www.adobe.com/2006/mxml"
-    width="400"
-    height="400"
-    >
-    <mx:Script>
+<s:Window
+        xmlns:fx="http://ns.adobe.com/mxml/2009"
+        xmlns:halo="library://ns.adobe.com/flex/halo"
+        xmlns:s="library://ns.adobe.com/flex/spark"
+        xmlns:mx="library://ns.adobe.com/flex/mx"
+        width="400"
+        height="400"
+        >
+    <fx:Script>
     <![CDATA[
 
         [Bindable]
-        private var _setting:DemoSetting;
+        private var _setting : DemoSetting;
 
-        public function set setting(setting:DemoSetting):void
+        public function set setting(setting : DemoSetting) : void
         {
             _setting = setting;
         }
 
     ]]>
-    </mx:Script>
-    <mx:HBox width="100%" height="100%">
-        <mx:Panel title="Server Setting" width="100%" height="100%">
+    </fx:Script>
+    <s:HGroup width="100%" height="100%">
+        <s:Panel title="Server Setting" width="100%" height="100%">
             <mx:Form width="100%">
                 <mx:FormItem label="host">
                     <mx:TextInput id="host" text="{_setting.host}" change="_setting.host=host.text;"/>
@@ -30,13 +33,14 @@
                     <mx:TextInput id="username" text="{_setting.username}" change="_setting.username=username.text;"/>
                 </mx:FormItem>
                 <mx:FormItem label="password">
-                    <mx:TextInput displayAsPassword="true" id="password" text="{_setting.password}" change="_setting.password=password.text;"/>
+                    <mx:TextInput displayAsPassword="true" id="password" text="{_setting.password}"
+                                  change="_setting.password=password.text;"/>
                 </mx:FormItem>
                 <mx:FormItem label="resource">
                     <mx:TextInput id="resource" text="{_setting.resource}" change="_setting.resource=resource.text;"/>
                 </mx:FormItem>
             </mx:Form>
-        </mx:Panel>
-    </mx:HBox>
-</mx:Window>
+        </s:Panel>
+    </s:HGroup>
+</s:Window>
 
