--- a/src/DemoXMPP.mxml
+++ b/src/DemoXMPP.mxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:WindowedApplication
-    xmlns:mx="http://www.adobe.com/2006/mxml"
-    title="as3xmppclient"
+<s:Application
+    xmlns:fx="http://ns.adobe.com/mxml/2009"
+    xmlns:mx="library://ns.adobe.com/flex/mx"
+    xmlns:s="library://ns.adobe.com/flex/spark"
     width="600"
     height="600"
-    paddingTop="5"
-    paddingLeft="5"
-    paddingRight="5"
-    paddingBottom="5"
-    backgroundGradientColors="[0x0099cc, 0x006666]"
     creationComplete="start();"
-    layout="vertical"
     >
-    <mx:Script>
+    <s:layout>
+        <s:VerticalLayout />
+    </s:layout>
+
+    <fx:Script>
     <![CDATA[
 
     private function start():void
@@ -42,12 +41,12 @@
     }
 
     ]]>
-    </mx:Script>
-    <mx:VBox width="100%" height="100%">
-        <mx:HBox width="100%" height="30">
-            <mx:Button label="Setting" click="openSettingWindow()"/>
-            <mx:Button label="Connect" click="connect()"/>
-        </mx:HBox>
+    </fx:Script>
+    <s:VGroup width="100%" height="100%">
+        <s:HGroup width="100%" height="30">
+            <s:Button label="Setting" click="openSettingWindow()"/>
+            <s:Button label="Connect" click="connect()"/>
+        </s:HGroup>
         <mx:TextArea id="logView" width="100%" height="100%"/>
-    </mx:VBox>
-</mx:WindowedApplication>
+    </s:VGroup>
+</s:Application>
